fix[TodoList]: fixed css bug with z-index #535

--- a/src/views/dashboard/admin/components/TodoList/index.scss
+++ b/src/views/dashboard/admin/components/TodoList/index.scss
@@ -231,7 +231,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    height: 50px;
+    height: 40px;
     overflow: hidden;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
   }
@@ -245,6 +245,8 @@
   .filters {
     margin: 0;
     padding: 0;
+    position: relative;
+    z-index: 1;
     list-style: none;
   }
   .filters li {
